[tool.poetry]
name = "space_pvp"
version = "0.1.0"
description = "game in js like asteroids but muiltiplayer pvp"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
websockets = "^10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
